--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<div id="yellow"> Paragraph-1</div>
-<div id="red"> Paragraph-2</div>
-<div id="green"> Paragraph-3</div>
+<div id="yellow"> <p>Paragraph-1</p></div>
+<div id="red"> <p>Paragraph-2</p></div>
+<div id="green"> <p>Paragraph-3</p></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
